Small addition to page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
    <title>Its coursera!</title>
 </head>
 <body>
-	<h1>hi coursera its marie!</h1>
+	<h1>hi coursera its marie! how are you?</h1>
 </body>
 </html>
